--- a/examples/boilerplate/plasma.html
+++ b/examples/boilerplate/plasma.html
@@ -31,6 +31,7 @@
       padding: 10px 16px;
       border-radius: 6px;
       z-index: 100;
+      pointer-events: none;
     }
 
     .info code {
@@ -45,6 +46,7 @@
   <script>
     // ═══════════════════════════════════════════════════════════════════════════
     // VANILLA WEBGL2 PLASMA - BOILERPLATE EXAMPLE
+    // procedural one-shader effect (matches glsl/plasma.html logic)
     // ═══════════════════════════════════════════════════════════════════════════
 
     const canvas = document.getElementById('canvas');
@@ -69,79 +71,93 @@ uniform vec2 uResolution;
 uniform float uTime;
 uniform vec2 uMouse;
 
-// Classic plasma functions
-float plasma1(vec2 p, float t) {
-  return sin(p.x * 10.0 + t);
-}
-
-float plasma2(vec2 p, float t) {
-  return sin(10.0 * (p.x * sin(t * 0.5) + p.y * cos(t * 0.3)) + t);
-}
-
-float plasma3(vec2 p, float t) {
-  float cx = p.x + 0.5 * sin(t * 0.3);
-  float cy = p.y + 0.5 * cos(t * 0.5);
-  return sin(sqrt(100.0 * (cx * cx + cy * cy)) + t);
-}
-
-float plasma4(vec2 p, float t) {
-  float cx = p.x + 0.3 * sin(t * 0.7);
-  float cy = p.y + 0.3 * cos(t * 0.4);
-  return sin(sqrt(50.0 * (cx * cx + cy * cy)) + t * 2.0);
-}
-
-// Better color palette
-vec3 palette(float t) {
-  vec3 a = vec3(0.5, 0.5, 0.5);
-  vec3 b = vec3(0.5, 0.5, 0.5);
-  vec3 c = vec3(1.0, 1.0, 1.0);
-  vec3 d = vec3(0.0, 0.33, 0.67);
-  return a + b * cos(6.28318 * (c * t + d));
-}
-
-vec3 palette2(float t) {
-  vec3 a = vec3(0.5, 0.5, 0.5);
-  vec3 b = vec3(0.5, 0.5, 0.5);
-  vec3 c = vec3(1.0, 0.7, 0.4);
-  vec3 d = vec3(0.0, 0.15, 0.2);
+// Better color palette function
+vec3 palette(float t, vec3 a, vec3 b, vec3 c, vec3 d) {
   return a + b * cos(6.28318 * (c * t + d));
 }
 
 void main() {
-  vec2 uv = (gl_FragCoord.xy - 0.5 * uResolution) / min(uResolution.x, uResolution.y);
-  float t = uTime * 0.8;
+  vec2 uv = gl_FragCoord.xy / uResolution;
+  vec2 p = (gl_FragCoord.xy - uResolution * 0.5) / uResolution.y;
+  
+  float t = uTime * 0.3;
   
   // Mouse influence
-  vec2 mouse = (uMouse - 0.5) * 2.0;
-  float mouseDist = length(uv - mouse);
-  float mouseInfluence = exp(-mouseDist * 3.0);
+  vec2 mouseP = (uMouse - 0.5) * vec2(uResolution.x / uResolution.y, 1.0);
+  vec2 m = (uMouse - 0.5);
+  m.x *= uResolution.x / uResolution.y;
   
-  // Combine plasma patterns
-  float v1 = plasma1(uv, t);
-  float v2 = plasma2(uv, t * 1.3);
-  float v3 = plasma3(uv + mouse * 0.3, t * 0.7);
-  float v4 = plasma4(uv - mouse * 0.2, t);
+  float mouseDist = length(p - m);
+  float mouseInfluence = exp(-mouseDist * 4.0);
   
-  // Mix with mouse interaction
-  float plasma = v1 + v2 + v3 + v4;
-  plasma = plasma * 0.25;
-  plasma += sin(mouseDist * 20.0 - t * 5.0) * mouseInfluence * 0.5;
+  // Multiple wave patterns
+  float v = 0.0;
   
-  // Create color layers
-  vec3 col1 = palette(plasma + t * 0.1);
-  vec3 col2 = palette2(plasma * 0.5 - t * 0.15);
+  // Basic plasma waves
+  v += sin(p.x * 10.0 + t * 1.5);
+  v += sin(p.y * 10.0 + t * 1.2);
+  v += sin((p.x + p.y) * 10.0 + t);
+  
+  // Circular waves
+  float cx = p.x + 0.5 * sin(t * 0.5);
+  float cy = p.y + 0.5 * cos(t * 0.4);
+  v += sin(sqrt(cx * cx + cy * cy + 1.0) * 12.0 - t * 2.0);
+  
+  // Additional moving centers
+  for (int i = 0; i < 4; i++) {
+    float fi = float(i);
+    float angle = t * 0.3 + fi * 1.57;
+    vec2 center = vec2(cos(angle), sin(angle * 0.7)) * 0.4;
+    float d = length(p - center);
+    v += sin(d * 15.0 - t * 2.5 + fi);
+  }
+  
+  // Mouse ripple
+  v += sin(mouseDist * 30.0 - t * 8.0) * mouseInfluence * 2.0;
+  
+  v *= 0.15;
+  
+  // Create multiple color layers
+  vec3 col1 = palette(v + t * 0.1, 
+    vec3(0.5, 0.5, 0.5), 
+    vec3(0.5, 0.5, 0.5), 
+    vec3(1.0, 1.0, 1.0), 
+    vec3(0.0, 0.33, 0.67)
+  );
+  
+  vec3 col2 = palette(v * 0.7 - t * 0.15,
+    vec3(0.5, 0.5, 0.5),
+    vec3(0.5, 0.5, 0.5),
+    vec3(1.0, 0.7, 0.4),
+    vec3(0.0, 0.15, 0.2)
+  );
+  
+  vec3 col3 = palette(v * 0.5 + t * 0.2,
+    vec3(0.8, 0.5, 0.4),
+    vec3(0.2, 0.4, 0.2),
+    vec3(2.0, 1.0, 1.0),
+    vec3(0.0, 0.25, 0.25)
+  );
   
   // Blend colors
-  vec3 color = mix(col1, col2, sin(plasma * 3.14159) * 0.5 + 0.5);
+  float blend1 = sin(v * 3.14159) * 0.5 + 0.5;
+  float blend2 = cos(v * 2.0 + t) * 0.5 + 0.5;
   
-  // Add glow effect near mouse
-  color += vec3(0.3, 0.2, 0.5) * mouseInfluence * 0.5;
+  vec3 color = mix(col1, col2, blend1);
+  color = mix(color, col3, blend2 * 0.4);
   
-  // Add some contrast
-  color = pow(color, vec3(0.9));
+  // Add glow near mouse
+  color += vec3(0.4, 0.3, 0.6) * mouseInfluence * 0.6;
+  
+  // Add pulsing brightness
+  float pulse = sin(t * 2.0) * 0.1 + 0.9;
+  color *= pulse;
+  
+  // Enhance contrast
+  color = pow(color, vec3(0.85));
   
   // Subtle vignette
-  float vignette = 1.0 - length(uv) * 0.3;
+  float vignette = 1.0 - length(uv - 0.5) * 0.35;
   color *= vignette;
   
   fragColor = vec4(color, 1.0);
@@ -191,12 +207,11 @@ void main() {
       mouse[1] = 1.0 - e.clientY / window.innerHeight;
     });
     canvas.addEventListener('touchmove', e => {
-      e.preventDefault();
       if (e.touches.length > 0) {
         mouse[0] = e.touches[0].clientX / window.innerWidth;
         mouse[1] = 1.0 - e.touches[0].clientY / window.innerHeight;
       }
-    }, { passive: false });
+    }, { passive: true });
 
     const vao = gl.createVertexArray();
     gl.bindVertexArray(vao);
