--- a/examples/boilerplate/water.html
+++ b/examples/boilerplate/water.html
@@ -31,6 +31,7 @@
       padding: 10px 16px;
       border-radius: 6px;
       z-index: 100;
+      pointer-events: none;
     }
 
     .info code {
@@ -40,11 +41,12 @@
 </head>
 
 <body>
-  <div class="info">📝 <code>Boilerplate</code> - Vanilla WebGL2 Water | Click to create ripples</div>
+  <div class="info">📝 <code>Boilerplate</code> - Vanilla WebGL2 Water | Move mouse to interact</div>
   <canvas id="canvas"></canvas>
   <script>
     // ═══════════════════════════════════════════════════════════════════════════
     // VANILLA WEBGL2 WATER - BOILERPLATE EXAMPLE
+    // procedural one-shader effect (matches glsl/water.html logic)
     // ═══════════════════════════════════════════════════════════════════════════
 
     const canvas = document.getElementById('canvas');
@@ -55,144 +57,146 @@
       throw new Error('WebGL2 not supported');
     }
 
-    gl.getExtension('EXT_color_buffer_float');
-
     const vertexShaderSource = `#version 300 es
 void main() {
   vec2 pos[3] = vec2[](vec2(-1,-1), vec2(3,-1), vec2(-1,3));
   gl_Position = vec4(pos[gl_VertexID], 0, 1);
 }`;
 
-    const simulationFragSource = `#version 300 es
+    const fragmentShaderSource = `#version 300 es
 precision highp float;
 out vec4 fragColor;
 
-uniform sampler2D uState;
 uniform vec2 uResolution;
 uniform float uTime;
 uniform vec2 uMouse;
-uniform float uMouseDown;
+
+float hash(vec2 p) {
+  return fract(sin(dot(p, vec2(127.1, 311.7))) * 43758.5453);
+}
+
+float noise(vec2 p) {
+  vec2 i = floor(p);
+  vec2 f = fract(p);
+  f = f * f * (3.0 - 2.0 * f);
+  return mix(
+    mix(hash(i), hash(i + vec2(1,0)), f.x),
+    mix(hash(i + vec2(0,1)), hash(i + vec2(1,1)), f.x),
+    f.y
+  );
+}
+
+float fbm(vec2 p) {
+  float f = 0.0;
+  float amp = 0.5;
+  mat2 rot = mat2(0.8, 0.6, -0.6, 0.8);
+  for (int i = 0; i < 5; i++) {
+    f += amp * noise(p);
+    p = rot * p * 2.0;
+    amp *= 0.5;
+  }
+  return f;
+}
+
+// Gerstner wave
+vec3 gerstnerWave(vec2 p, vec2 dir, float steepness, float wavelength, float t) {
+  float k = 6.28318 / wavelength;
+  float c = sqrt(9.8 / k);
+  float a = steepness / k;
+  float f = k * (dot(dir, p) - c * t);
+  return vec3(dir.x * a * cos(f), a * sin(f), dir.y * a * cos(f));
+}
 
 void main() {
   vec2 uv = gl_FragCoord.xy / uResolution;
-  vec2 texel = 1.0 / uResolution;
+  vec2 p = (gl_FragCoord.xy - uResolution * 0.5) / uResolution.y;
+  float t = uTime * 0.5;
   
-  // State: r=height, g=velocity, b=previous height
-  vec4 state = texture(uState, uv);
-  float height = state.r;
-  float velocity = state.g;
-  float prevHeight = state.b;
+  // Mouse influence
+  vec2 mouseP = (uMouse - 0.5) * vec2(uResolution.x / uResolution.y, 1.0);
+  vec2 m = (uMouse - 0.5);
+  m.x *= uResolution.x / uResolution.y;
+  float mouseDist = length(p - m);
   
-  // Sample neighbors for wave equation
-  float up = texture(uState, uv + vec2(0, texel.y)).r;
-  float down = texture(uState, uv - vec2(0, texel.y)).r;
-  float left = texture(uState, uv - vec2(texel.x, 0)).r;
-  float right = texture(uState, uv + vec2(texel.x, 0)).r;
+  // Combine multiple Gerstner waves
+  vec3 wave = vec3(0.0);
+  wave += gerstnerWave(p * 5.0, normalize(vec2(1.0, 0.3)), 0.15, 0.8, t);
+  wave += gerstnerWave(p * 5.0, normalize(vec2(-0.5, 0.8)), 0.12, 0.6, t * 1.1);
+  wave += gerstnerWave(p * 8.0, normalize(vec2(0.7, -0.5)), 0.08, 0.4, t * 1.3);
+  wave += gerstnerWave(p * 12.0, normalize(vec2(-0.3, -0.7)), 0.05, 0.25, t * 1.5);
   
-  // Diagonal neighbors for smoother waves
-  float upLeft = texture(uState, uv + vec2(-texel.x, texel.y)).r;
-  float upRight = texture(uState, uv + vec2(texel.x, texel.y)).r;
-  float downLeft = texture(uState, uv + vec2(-texel.x, -texel.y)).r;
-  float downRight = texture(uState, uv + vec2(texel.x, -texel.y)).r;
+  // Add turbulent detail
+  float detail = fbm(p * 8.0 + t * 0.2) * 0.1;
+  wave.y += detail;
   
-  // Wave equation with 8-point Laplacian for smoother results
-  float laplacian = (up + down + left + right) * 0.2 + 
-                    (upLeft + upRight + downLeft + downRight) * 0.05 - 
-                    height * 1.0;
+  // Mouse creates local disturbance
+  float mouseRipple = sin(mouseDist * 40.0 - t * 8.0) * exp(-mouseDist * 6.0) * 0.15;
+  wave.y += mouseRipple;
   
-  // Wave propagation
-  float speed = 0.98;
-  velocity += laplacian * speed;
-  velocity *= 0.997; // Damping
+  // Calculate normals from wave displacement
+  float eps = 0.01;
+  vec3 wave_dx = gerstnerWave((p + vec2(eps, 0)) * 5.0, normalize(vec2(1.0, 0.3)), 0.15, 0.8, t)
+               + gerstnerWave((p + vec2(eps, 0)) * 5.0, normalize(vec2(-0.5, 0.8)), 0.12, 0.6, t * 1.1);
+  vec3 wave_dy = gerstnerWave((p + vec2(0, eps)) * 5.0, normalize(vec2(1.0, 0.3)), 0.15, 0.8, t)
+               + gerstnerWave((p + vec2(0, eps)) * 5.0, normalize(vec2(-0.5, 0.8)), 0.12, 0.6, t * 1.1);
   
-  float newHeight = height + velocity * 0.5;
+  vec3 normal = normalize(vec3(
+    (wave.y - wave_dx.y) * 10.0,
+    1.0,
+    (wave.y - wave_dy.y) * 10.0
+  ));
   
-  // Mouse interaction - create ripples
-  float d = length(uv - uMouse);
-  if (uMouseDown > 0.5 && d < 0.06) {
-    float ripple = (1.0 - d / 0.06);
-    ripple = ripple * ripple * ripple;
-    newHeight += ripple * 2.5;
-  }
+  // View and light setup
+  vec3 viewDir = vec3(0.0, 1.0, 0.0);
+  vec3 lightDir = normalize(vec3(0.3, 0.8, 0.5));
   
-  // Random raindrops
-  float rain = fract(sin(dot(floor(uv * 50.0 + uTime * 2.0), vec2(127.1, 311.7))) * 43758.5453);
-  if (rain > 0.9998) {
-    newHeight += 1.5;
-  }
+  // Fresnel
+  float fresnel = pow(1.0 - max(0.0, dot(viewDir, normal)), 4.0);
+  fresnel = 0.15 + 0.85 * fresnel;
   
-  // Edge damping
-  float edge = min(min(uv.x, 1.0 - uv.x), min(uv.y, 1.0 - uv.y));
-  edge = smoothstep(0.0, 0.1, edge);
-  newHeight *= edge;
-  velocity *= edge;
+  // Reflection
+  vec3 reflDir = reflect(-viewDir, normal);
+  float skyGradient = reflDir.y * 0.5 + 0.5;
+  vec3 skyColor = mix(
+    vec3(0.7, 0.8, 0.95),
+    vec3(0.4, 0.6, 0.9),
+    pow(skyGradient, 0.6)
+  );
   
-  fragColor = vec4(newHeight, velocity, height, 1.0);
-}`;
-
-    const displayFragSource = `#version 300 es
-precision highp float;
-out vec4 fragColor;
-
-uniform sampler2D uState;
-uniform vec2 uResolution;
-uniform float uTime;
-
-void main() {
-  vec2 uv = gl_FragCoord.xy / uResolution;
-  vec2 texel = 1.0 / uResolution;
+  // Sun specular
+  float sunSpec = pow(max(0.0, dot(reflDir, lightDir)), 200.0);
+  vec3 sunColor = vec3(1.0, 0.95, 0.9) * sunSpec * 4.0;
   
-  float height = texture(uState, uv).r;
+  // Water colors
+  vec3 waterDeep = vec3(0.01, 0.05, 0.12);
+  vec3 waterShallow = vec3(0.08, 0.2, 0.3);
+  float depth = 0.5 + wave.y * 3.0;
+  vec3 waterColor = mix(waterDeep, waterShallow, clamp(depth, 0.0, 1.0));
   
-  // Calculate normals from height field
-  float dx = texture(uState, uv + vec2(texel.x, 0)).r - texture(uState, uv - vec2(texel.x, 0)).r;
-  float dy = texture(uState, uv + vec2(0, texel.y)).r - texture(uState, uv - vec2(0, texel.y)).r;
-  vec3 normal = normalize(vec3(-dx * 30.0, -dy * 30.0, 1.0));
+  // Caustics
+  float caustic1 = sin((p.x + normal.x) * 30.0 + t * 2.0) * sin((p.y + normal.z) * 30.0 + t * 1.5);
+  float caustic2 = sin((p.x - normal.x) * 20.0 - t * 1.5) * sin((p.y - normal.z) * 25.0 + t * 2.0);
+  float caustics = pow((caustic1 + caustic2) * 0.5 + 0.5, 4.0) * 0.2;
+  waterColor += vec3(0.2, 0.3, 0.4) * caustics;
   
-  // Refraction offset
-  vec2 refractOffset = normal.xy * 0.03;
-  vec2 refractUV = uv + refractOffset;
+  // Combine
+  vec3 color = mix(waterColor, skyColor, fresnel * 0.7);
+  color += sunColor;
   
-  // Deep water gradient
-  vec3 deepColor = vec3(0.01, 0.05, 0.15);
-  vec3 shallowColor = vec3(0.1, 0.4, 0.5);
-  vec3 waterColor = mix(deepColor, shallowColor, pow(uv.y, 0.7));
+  // Foam on wave crests
+  float foam = smoothstep(0.08, 0.15, wave.y);
+  color = mix(color, vec3(0.95, 0.98, 1.0), foam * 0.5);
   
-  // Caustics pattern
-  float caustic1 = sin(refractUV.x * 40.0 + uTime * 2.0) * sin(refractUV.y * 40.0 + uTime * 1.5);
-  float caustic2 = sin(refractUV.x * 25.0 - uTime * 1.5) * sin(refractUV.y * 30.0 + uTime * 2.0);
-  float caustics = (caustic1 + caustic2) * 0.5 + 0.5;
-  caustics = pow(caustics, 3.0) * 0.4;
+  // Subsurface scattering
+  float sss = pow(max(0.0, dot(lightDir, -normal)), 2.0) * 0.1;
+  color += vec3(0.1, 0.3, 0.4) * sss;
   
-  waterColor += vec3(0.2, 0.4, 0.5) * caustics * (1.0 - uv.y * 0.5);
+  // Tone mapping
+  color = 1.0 - exp(-color * 1.2);
+  color = pow(color, vec3(0.95));
   
-  // Fresnel reflection
-  vec3 viewDir = vec3(0, 0, 1);
-  float fresnel = pow(1.0 - max(dot(normal, viewDir), 0.0), 4.0);
-  
-  // Sky reflection color
-  vec3 skyColor = vec3(0.4, 0.6, 0.9);
-  float skyGradient = normal.y * 0.5 + 0.5;
-  skyColor = mix(vec3(0.8, 0.85, 0.9), skyColor, skyGradient);
-  
-  // Combine water and reflection
-  vec3 color = mix(waterColor, skyColor, fresnel * 0.6);
-  
-  // Specular highlights
-  vec3 lightDir = normalize(vec3(0.5, 0.8, 1.0));
-  vec3 halfVec = normalize(lightDir + viewDir);
-  float spec = pow(max(dot(normal, halfVec), 0.0), 120.0);
-  color += vec3(1.0, 0.98, 0.95) * spec * 0.8;
-  
-  // Wave peaks are brighter (foam-like)
-  float foam = smoothstep(0.3, 0.8, abs(height));
-  color = mix(color, vec3(0.9, 0.95, 1.0), foam * 0.3);
-  
-  // Depth-based darkening
-  color *= 0.85 + uv.y * 0.15;
-  
-  // Subtle vignette
-  float vignette = 1.0 - length(uv - 0.5) * 0.3;
+  // Vignette
+  float vignette = 1.0 - length(uv - 0.5) * 0.25;
   color *= vignette;
   
   fragColor = vec4(color, 1.0);
@@ -223,62 +227,30 @@ void main() {
       return program;
     }
 
-    const simProgram = createProgram(vertexShaderSource, simulationFragSource);
-    const displayProgram = createProgram(vertexShaderSource, displayFragSource);
-
-    let width, height;
-    let fboA, fboB, texA, texB;
-
-    function createFBO(w, h) {
-      const tex = gl.createTexture();
-      gl.bindTexture(gl.TEXTURE_2D, tex);
-      gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA16F, w, h, 0, gl.RGBA, gl.HALF_FLOAT, null);
-      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-      gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-
-      const fb = gl.createFramebuffer();
-      gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
-      gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
-
-      return { fb, tex };
-    }
+    const program = createProgram(vertexShaderSource, fragmentShaderSource);
 
     function resize() {
       const dpr = window.devicePixelRatio || 1;
-      width = Math.floor(window.innerWidth * dpr * 0.5);
-      height = Math.floor(window.innerHeight * dpr * 0.5);
       canvas.width = window.innerWidth * dpr;
       canvas.height = window.innerHeight * dpr;
-
-      const a = createFBO(width, height);
-      const b = createFBO(width, height);
-      fboA = a.fb; texA = a.tex;
-      fboB = b.fb; texB = b.tex;
+      gl.viewport(0, 0, canvas.width, canvas.height);
     }
 
     resize();
     window.addEventListener('resize', resize);
 
     let mouse = [0.5, 0.5];
-    let mouseDown = false;
 
     canvas.addEventListener('mousemove', e => {
       mouse[0] = e.clientX / window.innerWidth;
       mouse[1] = 1.0 - e.clientY / window.innerHeight;
     });
-    canvas.addEventListener('mousedown', () => mouseDown = true);
-    canvas.addEventListener('mouseup', () => mouseDown = false);
     canvas.addEventListener('touchmove', e => {
-      e.preventDefault();
       if (e.touches.length > 0) {
         mouse[0] = e.touches[0].clientX / window.innerWidth;
         mouse[1] = 1.0 - e.touches[0].clientY / window.innerHeight;
       }
-    }, { passive: false });
-    canvas.addEventListener('touchstart', () => mouseDown = true);
-    canvas.addEventListener('touchend', () => mouseDown = false);
+    }, { passive: true });
 
     const vao = gl.createVertexArray();
     gl.bindVertexArray(vao);
@@ -286,40 +258,12 @@ void main() {
     function render(time) {
       time *= 0.001;
 
-      // Run simulation multiple times for stability
-      for (let i = 0; i < 3; i++) {
-        gl.bindFramebuffer(gl.FRAMEBUFFER, fboB);
-        gl.viewport(0, 0, width, height);
-        gl.useProgram(simProgram);
+      gl.useProgram(program);
+      gl.uniform2f(gl.getUniformLocation(program, 'uResolution'), canvas.width, canvas.height);
+      gl.uniform1f(gl.getUniformLocation(program, 'uTime'), time);
+      gl.uniform2f(gl.getUniformLocation(program, 'uMouse'), mouse[0], mouse[1]);
 
-        gl.uniform2f(gl.getUniformLocation(simProgram, 'uResolution'), width, height);
-        gl.uniform1f(gl.getUniformLocation(simProgram, 'uTime'), time);
-        gl.uniform2f(gl.getUniformLocation(simProgram, 'uMouse'), mouse[0], mouse[1]);
-        gl.uniform1f(gl.getUniformLocation(simProgram, 'uMouseDown'), mouseDown ? 1 : 0);
-
-        gl.activeTexture(gl.TEXTURE0);
-        gl.bindTexture(gl.TEXTURE_2D, texA);
-        gl.uniform1i(gl.getUniformLocation(simProgram, 'uState'), 0);
-
-        gl.bindVertexArray(vao);
-        gl.drawArrays(gl.TRIANGLES, 0, 3);
-
-        [fboA, fboB] = [fboB, fboA];
-        [texA, texB] = [texB, texA];
-      }
-
-      // Display pass
-      gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-      gl.viewport(0, 0, canvas.width, canvas.height);
-      gl.useProgram(displayProgram);
-
-      gl.uniform2f(gl.getUniformLocation(displayProgram, 'uResolution'), canvas.width, canvas.height);
-      gl.uniform1f(gl.getUniformLocation(displayProgram, 'uTime'), time);
-
-      gl.activeTexture(gl.TEXTURE0);
-      gl.bindTexture(gl.TEXTURE_2D, texA);
-      gl.uniform1i(gl.getUniformLocation(displayProgram, 'uState'), 0);
-
+      gl.bindVertexArray(vao);
       gl.drawArrays(gl.TRIANGLES, 0, 3);
 
       requestAnimationFrame(render);
