--- a/examples/index.html
+++ b/examples/index.html
@@ -297,6 +297,10 @@
         <h3 class="3d">🎲 3D Examples <code>Geometry, Textures & Cameras</code></h3>
         <div class="grid">
           <div class="card 3d">
+            <h4>💎 Crystal</h4>
+            <p>Single crystal with translucent glow shader</p><a href="./3d/crystal.html">Demo →</a>
+          </div>
+          <div class="card 3d">
             <h4>📦 Cube</h4>
             <p>Basic 3D cube with orbit camera</p><a href="./3d/cube.html">Demo →</a>
           </div>
@@ -315,6 +319,10 @@
       <div class="section">
         <h3 class="scene">🎬 Scene Graph Examples <code>mushu('#c').scene()</code></h3>
         <div class="grid">
+          <div class="card scene">
+            <h4>💠 Crystal Cluster</h4>
+            <p>Intricate crystal cluster with glow effects</p><a href="./scene/crystal-cluster.html">Demo →</a>
+          </div>
           <div class="card scene">
             <h4>🎨 Multi-Material</h4>
             <p>Multiple PBR materials on different objects</p><a href="./scene/multi-material.html">Demo →</a>
