--- a/examples/advanced-model-scene.html
+++ b/examples/advanced-model-scene.html
@@ -74,6 +74,7 @@
             line-height: 1.5;
         }
     </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
