--- a/examples/gpu/plasma.html
+++ b/examples/gpu/plasma.html
@@ -10,6 +10,7 @@
       color: #ff44ff;
     }
   </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
@@ -262,7 +263,7 @@
       hideIfIframe();
     }
   </script>
-  <a href="index.html" class="home-link">← Back to Index</a>
+  <a href="/examples/index.html" class="home-link">← Back to Index</a>
 </body>
 
 </html>
