--- a/examples/gpu/water.html
+++ b/examples/gpu/water.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>mushu — WebGPU Water Demo</title>
   <link rel="stylesheet" href="../common.css">
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
@@ -298,7 +299,7 @@
       hideIfIframe();
     }
   </script>
-  <a href="index.html" class="home-link">← Back to Index</a>
+  <a href="/examples/index.html" class="home-link">← Back to Index</a>
 </body>
 
 </html>
