--- a/examples/model-loader.html
+++ b/examples/model-loader.html
@@ -183,6 +183,7 @@
             color: #51cf66;
         }
     </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
