--- a/examples/scene/crystal-cluster.html
+++ b/examples/scene/crystal-cluster.html
@@ -119,6 +119,7 @@
             color: #a0d8ff;
         }
     </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
