--- a/examples/scene/hierarchical.html
+++ b/examples/scene/hierarchical.html
@@ -39,6 +39,7 @@
             color: #ffaa44;
         }
     </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
