--- a/examples/flow-gpu/plasma.html
+++ b/examples/flow-gpu/plasma.html
@@ -4,59 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>mushu — GPU Flow Plasma Demo</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      background: #000;
-      overflow: hidden;
-    }
-
-    .info {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      color: #fff;
-      font: 14px monospace;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 10px 16px;
-      border-radius: 6px;
-      z-index: 100;
-    }
-
-    .info code {
-      color: #ff44ff;
-    }
-
-    .home-link {
-      position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      background: linear-gradient(135deg, #ff6b6b, #feca57);
-      color: #000;
-      padding: 0.75rem 1.5rem;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 0.85rem;
-      box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
-      transition: all 0.2s;
-      z-index: 100;
-      font-family: monospace;
-    }
-
-    .home-link:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4);
-    }
-
-    .home-link.hidden {
-      display: none;
-    }
-  </style>
+  <link rel="stylesheet" href="../common.css">
+  <style>.info code { color: #ff44ff; }</style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
@@ -66,7 +16,7 @@
     import { mushu } from '/src/index.js';
 
     // ═══════════════════════════════════════════════════════════════════════════
-    // YOGPU Advanced Plasma Effect (WebGPU Fluent API)
+    // GPU Flow Advanced Plasma Effect (WebGPU Fluent API)
     // 
     // Uses the yoGPU() fluent builder for WebGPU compute+render pipeline
     // Features:
@@ -236,7 +186,7 @@
       updateFPS();
     })();
 
-    console.log('%c 🌈 mushu YOGPU Plasma Ready ', 'background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+    console.log('%c 🌈 mushu GPU Flow Plasma Ready ', 'background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
     console.log('Move mouse to influence plasma. Click for energy burst!');
   </script>
   <script>
@@ -255,7 +205,7 @@
       hideIfIframe();
     }
   </script>
-  <a href="index.html" class="home-link">← Back to Index</a>
+  <a href="/examples/index.html" class="home-link">← Back to Index</a>
 </body>
 
 </html>
