--- a/examples/gpu/fire.html
+++ b/examples/gpu/fire.html
@@ -10,6 +10,7 @@
       color: #ff6622;
     }
   </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
@@ -196,7 +197,7 @@
       return vec4<f32>(finalColor, 1.0);
     }
   `,
-      { canvas: document.getElementById('c') }
+      
     );
 
     // FPS Counter
@@ -236,7 +237,7 @@
       hideIfIframe();
     }
   </script>
-  <a href="index.html" class="home-link">← Back to Index</a>
+  <a href="/examples/index.html" class="home-link">← Back to Index</a>
 </body>
 
 </html>
