--- a/examples/scene/physical-materials.html
+++ b/examples/scene/physical-materials.html
@@ -62,6 +62,7 @@
             vertical-align: middle;
         }
     </style>
+  <script type="module" src="/examples/code-viewer.js"></script>
 </head>
 
 <body>
